# rApp

./: CMakeLists.txt  RoverLogo.xcf  TreatImages.xcf  chargingIcon.xcf  fakeRover.cpp  fakeRover.h  main.cpp  rApp.cpp  rApp.h  simpleTest.cpp
